Coming Soon Pricing

--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -49,17 +49,17 @@
                     <td class="price">
                         <p>&dollar;29.99/month</p>
                         <p><small>Billed annually at &dollar;299.99</small></p>
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                     <td class="price">
                         <p>&dollar;60.99/month</p>
                         <p><small>Billed annually at &dollar;599.99</small></p>
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                     <td class="price">
                         <p>&dollar;99.99/month</p>
                         <p><small>Billed annually at &dollar;999.99</small></p>
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                 </tr>
                 
@@ -132,13 +132,13 @@
                 <tr>
                     <td></td>
                     <td class="price">
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                     <td class="price">
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                     <td class="price">
-                        <a href="#">Get started</a>
+                        <a href="#">Coming Soon</a>
                     </td>
                 </tr>
             </tbody>
