--- a/static/styles/account.css
+++ b/static/styles/account.css
@@ -127,3 +127,20 @@
     background-color: #edf1d6;
   }
 }
+
+button {
+  background-color: #28a745;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: block;
+  margin: 20px auto;
+}
+
+button:hover {
+  background-color: #218838;
+}
