course_order_placement footer is fixed

--- a/templates/course_order_placement.html
+++ b/templates/course_order_placement.html
@@ -65,7 +65,7 @@
           <button type="submit" class="featured-button">Order</button>
         </form>
       </div>
-   
+    </div>
     <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
   </body>
