--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -10,10 +10,11 @@
     />
     <link rel="stylesheet" href="/static/general.css" />
     <link rel="stylesheet" href="/static/styles/forget_password.css" />
-
     <title>Forgot Password</title>
   </head>
+  <body>
       <iframe src="/header" id="iframe-header"></iframe>
+
       <div id="body-container">
         <div id="forgot-password">
           <h1>Forgot Password</h1>
@@ -42,10 +43,8 @@
             {% endif %}
         {% endwith %}
       </div>
-    
 
-
-    <iframe src="/footer" id="iframe-footer"></iframe>
+      <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
   </body>
 </html>
