--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles/home.css" />
-    <link rel="stylesheet" href="/static/styles/header.css"/>
-    <link rel="stylesheet" href="/static/general.css">
-    <title>Reset Password</title>
-  </head>
-  <body>
-    <div id="body-container">
-      <iframe src="/header" id="iframe-header"></iframe>
-    </div>
-    
-    <div id="reset-link">
-        <p>Reset Password</p>
-        <form action="/reset-password/{{reset_token}}" method="POST">
-          <input type="hidden" name="reset-token" value="{{reset_token}}">
-            <label for="password">New password</label>
-            <input type="password" name="password" id="password"/>
-            <br>
-            <label for="confirm_password">Confirm password</label>
-            <input type="password" name="confirm-password" id="confirm-password"/>
-            <br>
-            <button type="submit">Reset</button>
-        </form>
-    </div>
 
-     <!-- add logout -->
-    <a href="/logout">Log out</a>
-   
-    <iframe src="/footer" id="iframe-footer"></iframe>
-    <script src="/static/general.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/static/styles/home.css" />
+  <link rel="stylesheet" href="/static/styles/header.css" />
+  <link rel="stylesheet" href="/static/general.css">
+  <link rel="stylesheet" href="/static/styles/reset_password.css" />
+  <title>Reset Password</title>
+</head>
+
+<body>
+  <div id="body-container">
+    <iframe src="/header" id="iframe-header"></iframe>
+  </div>
+
+  <div id="reset-link">
+    <p>Reset Password</p>
+    <form action="/reset-password/{{reset_token}}" method="POST">
+      <input type="hidden" name="reset-token" value="{{reset_token}}">
+      <label for="password">New password</label>
+      <input type="password" name="password" id="password" />
+      <br>
+      <label for="confirm_password">Confirm password</label>
+      <input type="password" name="confirm-password" id="confirm-password" />
+      <br>
+      <button type="submit">Reset</button>
+    </form>
+  </div>
+  <iframe src="/footer" id="iframe-footer"></iframe>
+  <script src="/static/general.js"></script>
+</body>
+
 </html>
