--- a/templates/account.html
+++ b/templates/account.html
@@ -1,129 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/static/general.css" />
-    <link rel="stylesheet" href="/static/styles/account.css" />
-    <title>My Account</title>
-    <style>
-      {% if user %}
-      #account-page {
-        height: 100vh;
-        top: 65px;
-        margin: 0 150px 0px 0;
-      }
-      {% else %}
-      #account-page {
-        margin: 0 150px 100px 0;
-      }
-      {% endif %}
-      @media (max-width: 1199px) {
-        #account-page{
-          margin:0px;
-      }}
-    </style>
-  </head>
-  <body>
-    <iframe src="/header" id="iframe-header"></iframe>
-    <div></div>
-    <div id="main-container">
-      <div id="image-container">
-        <img src="/static/img/AccountBackground.png" />
-        <div id="text-overlay">
-          {% if user %}
-          <h1>Welcome Back</h1>
-          <p>{{user.name}}</p>
-          {% else %}
-          <h1>Join and learn with us</h1>
-          <p>Log in to get started!</p>
-          {% endif %}
-        </div>
-      </div>
 
-      <div id="account-page">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="/static/general.css" />
+  <link rel="stylesheet" href="/static/styles/account.css" />
+  <title>My Account</title>
+  <style>
+    {
+      % if user %
+    }
+
+    #account-page {
+      height: 100vh;
+      top: 65px;
+      margin: 0 150px 0px 0;
+    }
+
+      {
+      % else %
+    }
+
+    #account-page {
+      margin: 0 150px 100px 0;
+    }
+
+      {
+      % endif %
+    }
+
+    @media (max-width: 1199px) {
+      #account-page {
+        margin: 0px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <iframe src="/header" id="iframe-header"></iframe>
+  <div></div>
+  <div id="main-container">
+    <div id="image-container">
+      <img src="/static/img/AccountBackground.png" />
+      <div id="text-overlay">
         {% if user %}
-        <!-- account info -->
-        <h1>Account Information</h1>
-        <p>Full name: {{user.name}}</p>
-        <p>Address: {{user.address}}</p>
-        <p>Email: {{user.email}}</p>
-        <p>Phone: {{user.phone}}</p>
-        <img
-          id="profile-image"
-          class="profile-image"
-          src="{{user.image}}"
-          alt="profile picture"
-        />
-        <br>
-        {% if user.role == 'learner' or user.role == 'admin' %}
-        <h1>Course orders</h1>
-        {% for order in orders %}
-        <h3>{{order.course_name}}</h3>
-        <p><strong>Date ordered:</strong> {{order.created_at}}</p>
-        <p><strong>Access duration:</strong> {{order.access_duration}}</p>
-        <p><strong>Certification:</strong> {{order.certification}}</p>
-        {% endfor %}
-         {% endif %}
-         {% if user.role == 'instructor' or user.role == 'admin' %}
-         <a href="/courses/add">
-          <button type="button">Add Course</button>
-        </a>
+        <h1>Welcome Back</h1>
+        <p>{{user.name}}</p>
+        {% else %}
+        <h1>Join and learn with us</h1>
+        <p>Log in to get started!</p>
         {% endif %}
-         {% else %}
-        <!-- login box -->
-        <h1>Login</h1>
-        <form action="/login" method="POST">
-          <div>
-            <label for="username">Email or Phone:</label>
-            <input
-              type="text"
-              class="username-input"
-              id="username"
-              name="username"
-              required
-            />
-          </div>
-          <div>
-            <label for="password">Password:</label>
-            <input
-              type="password"
-              class="password-input"
-              id="password"
-              name="password"
-              required
-            />
-          </div>
-          <button type="submit">Login</button>
-        </form>
-        <div id="button-container">
-          <!-- forgot password link -->
-          <a href="/forgot-password">Forgot Password?</a>
-          <a href="/register">Register</a>
-        </div>
-        <div id="disclaimer-text">
-          <p>
-            By logging in, you agree to our<br />
-            <a href="/terms">Terms of service</a> and
-            <a href="/privacy">Privacy Policy</a>.
-          </p>
-        </div>
-
-        <!-- get flashed mesage -->
-        {% with messages = get_flashed_messages() %} {% if messages %}
-        <p class="flashed-msg">{{ messages[-1]}}</p>
-        {% endif %} {% endwith %} {% endif %}
       </div>
     </div>
 
-    <!-- Account Page -->
+    <div id="account-page">
+      {% if user %}
+      <!-- account info -->
+      <h1>Account Information</h1>
+      <p>Full name: {{user.name}}</p>
+      <p>Address: {{user.address}}</p>
+      <p>Email: {{user.email}}</p>
+      <p>Phone: {{user.phone}}</p>
+      <img id="profile-image" class="profile-image" src="{{user.image}}" alt="profile picture" />
+      <br>
+      {% if user.role == 'learner' or user.role == 'admin' %}
+      <h1>Course orders</h1>
+      {% for order in orders %}
+      <h3>{{order.course_name}}</h3>
+      <p><strong>Date ordered:</strong> {{order.created_at}}</p>
+      <p><strong>Access duration:</strong> {{order.access_duration}}</p>
+      <p><strong>Certification:</strong> {{order.certification}}</p>
+      {% endfor %}
+      {% endif %}
+      {% if user.role == 'instructor' or user.role == 'admin' %}
+      <a href="/courses/add">
+        <button type="button">Add Course</button>
+      </a>
+      {% endif %}
+      {% else %}
+      <!-- login box -->
+      <h1>Login</h1>
+      <form action="/login" method="POST">
+        <div>
+          <label for="username">Email or Phone:</label>
+          <input type="text" class="username-input" id="username" name="username" required />
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" class="password-input" id="password" name="password" required />
+        </div>
+        <button type="submit">Login</button>
+      </form>
+      <div id="button-container">
+        <!-- forgot password link -->
+        <a href="/forgot-password">Forgot Password?</a>
+        <a href="/register">Register</a>
+      </div>
+      <div id="disclaimer-text">
+        <p>
+          By logging in, you agree to our<br />
+          <a href="/terms">Terms of service</a> and
+          <a href="/privacy">Privacy Policy</a>.
+        </p>
+      </div>
 
-    <iframe src="/footer" id="iframe-footer"></iframe>
-    <script src="/static/general.js"></script>
-  </body>
+      <!-- get flashed mesage -->
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <p class="flashed-msg">{{ messages[-1]}}</p>
+      {% endif %} {% endwith %} {% endif %}
+    </div>
+  </div>
+
+  <!-- Account Page -->
+
+  <iframe src="/footer" id="iframe-footer"></iframe>
+  <script src="/static/general.js"></script>
+</body>
+
 </html>
