update Ning Profile Img

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,155 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="/static/styles/home.css" />
     <link rel="stylesheet" href="/static/styles/header.css" />
     <link rel="stylesheet" href="/static/styles/footer.css" />
     <link rel="stylesheet" href="/static/general.css" />
     <link rel="stylesheet" href="/static/styles/about.css" />
     <title>About Us</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <div id="body-container">
-        <iframe src="/header" id="iframe-header"></iframe>
+      <iframe src="/header" id="iframe-header"></iframe>
     </div>
 
     <!-- Main Content -->
     <div class="about-container">
-        <h1>About Us</h1>
+      <h1>About Us</h1>
 
-        <!-- Team Section -->
-        <div class="section">
-
-            <div class="row">
-                <div class="col-md-6 team-member">
-                    <img src="/static/img/duy_portrait.jpeg" alt="Duy Huynh Ngoc" id="modalBtn1">
-                    <h4>Duy Huynh Ngoc</h4>
-                    <p>RMIT University, Saigon South Campus</p>
-                </div>
-                <div class="col-md-6 team-member">
-                    <img src="/static/img/eduardo_portrait.jpg" alt="Eduardo Salcedo Fuentes" id="modalBtn2">
-                    <h4>Eduardo Salcedo Fuentes</h4>
-                    <p>RMIT University, Saigon South Campus</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6 team-member">
-                    <img src="/static/img/lisa_portrait.PNG" alt="Lisa Maria Huynh" id="modalBtn3">
-                    <h4>Lisa Maria Huynh</h4>
-                    <p>RMIT University, Saigon South Campus</p>
-                </div>
-                <div class="col-md-6 team-member">
-                    <img src="path-to-random-photo4.jpg" alt="Tu Tran Thanh" id="modalBtn4">
-                    <h4>Tu Tran Thanh</h4>
-                    <p>RMIT University, Saigon South Campus</p>
-                </div>
-            </div>
+      <!-- Team Section -->
+      <div class="section">
+        <div class="row">
+          <div class="col-md-6 team-member">
+            <img
+              src="/static/img/duy_portrait.jpeg"
+              alt="Duy Huynh Ngoc"
+              id="modalBtn1"
+            />
+            <h4>Duy Huynh Ngoc</h4>
+            <p>RMIT University, Saigon South Campus</p>
+          </div>
+          <div class="col-md-6 team-member">
+            <img
+              src="/static/img/eduardo_portrait.jpg"
+              alt="Eduardo Salcedo Fuentes"
+              id="modalBtn2"
+            />
+            <h4>Eduardo Salcedo Fuentes</h4>
+            <p>RMIT University, Saigon South Campus</p>
+          </div>
         </div>
+
+        <div class="row">
+          <div class="col-md-6 team-member">
+            <img
+              src="/static/img/lisa_portrait.PNG"
+              alt="Lisa Maria Huynh"
+              id="modalBtn3"
+            />
+            <h4>Lisa Maria Huynh</h4>
+            <p>RMIT University, Saigon South Campus</p>
+          </div>
+          <div class="col-md-6 team-member">
+            <img
+              src="/static/img/Ning_portrait.jpg"
+              alt="Tu Tran Thanh"
+              id="modalBtn4"
+            />
+            <h4>Tu Tran Thanh</h4>
+            <p>RMIT University, Saigon South Campus</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Modals -->
     <!-- Modal for Duy Huynh Ngoc -->
     <div id="myModal1" class="modal">
-        <div class="modal-content">
-            <span class="close" id="close1">&times;</span>
-            <h2>Duy Huynh Ngoc</h2>
-            <p>Email: <a href="mailto:s3924704@rmit.edu.vn">s3924704@rmit.edu.vn</a></p>
-            <p>Age: 21</p>
-            <p>Country: Vietnam</p>
-            <p>Major: BSc in Software Engineering</p>
-            <p>RMIT University, Saigon South Campus</p>
-        </div>
+      <div class="modal-content">
+        <span class="close" id="close1">&times;</span>
+        <h2>Duy Huynh Ngoc</h2>
+        <p>
+          Email: <a href="mailto:s3924704@rmit.edu.vn">s3924704@rmit.edu.vn</a>
+        </p>
+        <p>Age: 21</p>
+        <p>Country: Vietnam</p>
+        <p>Major: BSc in Software Engineering</p>
+        <p>RMIT University, Saigon South Campus</p>
+      </div>
     </div>
 
     <!-- Modal for Eduardo Salcedo Fuentes -->
     <div id="myModal2" class="modal">
-        <div class="modal-content">
-            <span class="close" id="close2">&times;</span>
-            <h2>Eduardo Salcedo Fuentes</h2>
-            <p>Email: <a href="mailto:s4118015@rmit.edu.vn">s4118015@rmit.edu.vn</a></p>
-            <p>Age: 21</p>
-            <p>Country: United States</p>
-            <p>Major: BSc in Software Engineering</p>
-            <p>RMIT University, Saigon South Campus</p>
-        </div>
+      <div class="modal-content">
+        <span class="close" id="close2">&times;</span>
+        <h2>Eduardo Salcedo Fuentes</h2>
+        <p>
+          Email: <a href="mailto:s4118015@rmit.edu.vn">s4118015@rmit.edu.vn</a>
+        </p>
+        <p>Age: 21</p>
+        <p>Country: United States</p>
+        <p>Major: BSc in Software Engineering</p>
+        <p>RMIT University, Saigon South Campus</p>
+      </div>
     </div>
-    
+
     <!-- Modal for Lisa Maria Huynh -->
     <div id="myModal3" class="modal">
-        <div class="modal-content">
-            <span class="close" id="close3">&times;</span>
-            <h2>Lisa Maria Huynh</h2>
-            <p>Email: <a href="mailto:s4110118@rmit.edu.vn">s4110118@rmit.edu.vn</a></p>
-            <p>Age: 23</p>
-            <p>Country: Denmark</p>
-            <p>Major: MSc in Computer Engineering</p>
-            <p>RMIT University, Saigon South Campus</p>
-        </div>
+      <div class="modal-content">
+        <span class="close" id="close3">&times;</span>
+        <h2>Lisa Maria Huynh</h2>
+        <p>
+          Email: <a href="mailto:s4110118@rmit.edu.vn">s4110118@rmit.edu.vn</a>
+        </p>
+        <p>Age: 23</p>
+        <p>Country: Denmark</p>
+        <p>Major: MSc in Computer Engineering</p>
+        <p>RMIT University, Saigon South Campus</p>
+      </div>
     </div>
-    
+
     <!-- Modal for Tu Tran Thanh -->
     <div id="myModal4" class="modal">
-        <div class="modal-content">
-            <span class="close" id="close4">&times;</span>
-            <h2>Tu Tran Thanh</h2>
-            <p>Email: <a href="mailto:s3957386@rmit.edu.vn">s3957386@rmit.edu.vn</a></p>
-            <p>Age: 21</p>
-            <p>Country: Vietnam</p>
-            <p>Major: BSc in Software Engineering</p>
-            <p>RMIT University, Saigon South Campus</p>
-        </div>
+      <div class="modal-content">
+        <span class="close" id="close4">&times;</span>
+        <h2>Tu Tran Thanh</h2>
+        <p>
+          Email: <a href="mailto:s3957386@rmit.edu.vn">s3957386@rmit.edu.vn</a>
+        </p>
+        <p>Age: 21</p>
+        <p>Country: Vietnam</p>
+        <p>Major: BSc in Software Engineering</p>
+        <p>RMIT University, Saigon South Campus</p>
+      </div>
     </div>
 
     <!-- Footer -->
     <iframe src="/footer" id="iframe-footer"></iframe>
 
     <script>
-        // Modal handling script
-        const modal1 = document.getElementById('myModal1');
-        const btn1 = document.getElementById('modalBtn1');
-        const close1 = document.getElementById('close1');
+      // Modal handling script
+      const modal1 = document.getElementById("myModal1");
+      const btn1 = document.getElementById("modalBtn1");
+      const close1 = document.getElementById("close1");
 
-        const modal2 = document.getElementById('myModal2');
-        const btn2 = document.getElementById('modalBtn2');
-        const close2 = document.getElementById('close2');
+      const modal2 = document.getElementById("myModal2");
+      const btn2 = document.getElementById("modalBtn2");
+      const close2 = document.getElementById("close2");
 
-        const modal3 = document.getElementById('myModal3');
-        const btn3 = document.getElementById('modalBtn3');
-        const close3 = document.getElementById('close3');
+      const modal3 = document.getElementById("myModal3");
+      const btn3 = document.getElementById("modalBtn3");
+      const close3 = document.getElementById("close3");
 
-        const modal4 = document.getElementById('myModal4');
-        const btn4 = document.getElementById('modalBtn4');
-        const close4 = document.getElementById('close4');
+      const modal4 = document.getElementById("myModal4");
+      const btn4 = document.getElementById("modalBtn4");
+      const close4 = document.getElementById("close4");
 
-        // Open modal functions
-        btn1.onclick = () => { modal1.classList.add('show'); }
-        btn2.onclick = () => { modal2.classList.add('show'); }
-        btn3.onclick = () => { modal3.classList.add('show'); }
-        btn4.onclick = () => { modal4.classList.add('show'); }
+      // Open modal functions
+      btn1.onclick = () => {
+        modal1.classList.add("show");
+      };
+      btn2.onclick = () => {
+        modal2.classList.add("show");
+      };
+      btn3.onclick = () => {
+        modal3.classList.add("show");
+      };
+      btn4.onclick = () => {
+        modal4.classList.add("show");
+      };
 
-        // Close modal functions
-        close1.onclick = () => { modal1.classList.remove('show'); }
-        close2.onclick = () => { modal2.classList.remove('show'); }
-        close3.onclick = () => { modal3.classList.remove('show'); }
-        close4.onclick = () => { modal4.classList.remove('show'); }
+      // Close modal functions
+      close1.onclick = () => {
+        modal1.classList.remove("show");
+      };
+      close2.onclick = () => {
+        modal2.classList.remove("show");
+      };
+      close3.onclick = () => {
+        modal3.classList.remove("show");
+      };
+      close4.onclick = () => {
+        modal4.classList.remove("show");
+      };
 
-        // Close modal when clicking outside of the content
-        window.onclick = (event) => {
-            if (event.target === modal1) { modal1.classList.remove('show'); }
-            if (event.target === modal2) { modal2.classList.remove('show'); }
-            if (event.target === modal3) { modal3.classList.remove('show'); }
-            if (event.target === modal4) { modal4.classList.remove('show'); }
+      // Close modal when clicking outside of the content
+      window.onclick = (event) => {
+        if (event.target === modal1) {
+          modal1.classList.remove("show");
         }
+        if (event.target === modal2) {
+          modal2.classList.remove("show");
+        }
+        if (event.target === modal3) {
+          modal3.classList.remove("show");
+        }
+        if (event.target === modal4) {
+          modal4.classList.remove("show");
+        }
+      };
     </script>
-</body>
-
+  </body>
 </html>
