adding course details css

--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/styles/home.css" />
-    <link rel="stylesheet" href="/static/styles/header.css"/>
-    <link rel="stylesheet" href="/static/general.css">
-    <title>Course Details - {{ course.name }}</title>
-  </head>
-  <body>
-    <div id="body-container">
-      <iframe src="/header" id="iframe-header"></iframe>
-    </div>
 
-    <div id="course-detail">
-      <h1>{{ course.name }}</h1>
-      <p>{{ course.description }}</p>
-      <img id="course-image" class="course-image" src="{{course.image}}" alt="{{course.name}}">
-      <p><strong>Category:</strong> {{ course.category }}</p>
-      <p><strong>Instructor:</strong> <a href="/instructor/{{instructor_id}}">{{ course.instructor }}</a></p>
-      <p><strong>Price:</strong> ${{ course.price }}</p>
-      <p><strong>Created At:</strong> {{ course.created_at }}</p>
-      
-      {% if user_role == 'learner' or user_role == 'admin' %}
-        <button>Trial For 2-Day</button>
-        <form action="/courses/order/{{course.id}}" method="POST">
-          <button>Enrol</button>
-        </form>
-      {% endif %}
-      {% if user_role == 'instructor' or user_role == 'admin' %}
-        <button>Edit course</button>
-      {% endif %}
-   
-    <iframe src="/footer" id="iframe-footer"></iframe>
-    <script src="/static/general.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/static/styles/home.css" />
+  <link rel="stylesheet" href="/static/styles/header.css" />
+  <link rel="stylesheet" href="/static/general.css">
+  <link rel="stylesheet" href="/static/styles/course_details.css" />
+  <title>Course Details - {{ course.name }}</title>
+</head>
+
+<body>
+  <div id="body-container">
+    <iframe src="/header" id="iframe-header"></iframe>
+  </div>
+
+  <div id="course-detail">
+    <h1>{{ course.name }}</h1>
+    <p>{{ course.description }}</p>
+    <img id="course-image" class="course-image" src="{{course.image}}" alt="{{course.name}}">
+    <p><strong>Category:</strong> {{ course.category }}</p>
+    <p><strong>Instructor:</strong> <a href="/instructor/{{instructor_id}}">{{ course.instructor }}</a></p>
+    <p><strong>Price:</strong> ${{ course.price }}</p>
+    <p><strong>Created At:</strong> {{ course.created_at }}</p>
+
+    {% if user_role == 'learner' or user_role == 'admin' %}
+      <button>Trial For 2-Day</button>
+      <form action="/courses/order/{{course.id}}" method="POST">
+        <button>Enrol</button>
+      </form>
+    {% endif %}
+    {% if user_role == 'instructor' or user_role == 'admin' %}
+      <button>Edit course</button>
+    {% endif %}
+  </div>
+
+  <iframe src="/footer" id="iframe-footer"></iframe>
+  <script src="/static/general.js"></script>
+</body>
+
 </html>
